Styled the story borders to look just like IG, with the color gradient and the correct spacing

--- a/instagram-clone/src/App.css
+++ b/instagram-clone/src/App.css
@@ -49,7 +49,7 @@ li {
 }
 .middle-wrapper {
   height: 100%;
-  width: 650px;
+  width: 600px;
   display:flex;
   flex-direction: column;
 }
