--- a/instagram-clone/src/components/newsfeed/NewsFeed.css
+++ b/instagram-clone/src/components/newsfeed/NewsFeed.css
@@ -89,18 +89,4 @@ transform: rotate(22deg);
  
 .comment-container {
   border-bottom: 1px rgba(128, 128, 128, 0.339) solid;
- 
 }
-
-  
-
-/* 
-style={{
-  backgroundColor: "black",
-  border: "0px",
-  borderBottom: " 1px solid grey",
-  resize: "none",
-  borderRadius: "0px",
-  height: "50px",
-  marginBottom: "20px",
-}} */
